@@ -1,3 +1,6 @@
+2008-03-04  Jeremy Cribb <jcribb@email.unc.edu>
+	* dmbr_plot_data.m: added text annotations that indicate (S)tart and (E)nd points on the shear thinning curve (apparent viscosity vs. max shear rate)
+
 2009-02-26  Jeremy Cribb <jcribb@email.unc.edu>
 	* Initial Version of driven microbead rheology analysis package.
 
